<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/image"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baltster"
        android:text="@string/test_crop_health"
        android:textColor="@android:color/white"
        android:textSize="14pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/cameraScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop"
        android:visibility="gone"/>

<!--    <SurfaceView-->
<!--        android:id="@+id/cameraScreen"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/gallery"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/crop" />-->

    <Button
        android:id="@+id/capture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundbutton"
        android:text="@string/capture"
        android:textColor="@android:color/black"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toStartOf="@+id/importGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />

    <Button
        android:id="@+id/importGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundbutton"
        android:text="@string/import_from_gallery"
        android:textColor="@android:color/black"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />

    <Button
        android:id="@+id/detect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundbutton"
        android:text="@string/detect"
        android:textColor="@android:color/black"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mPhotoImageView"
        android:contentDescription="@string/capture_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/detect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop"
        app:srcCompat="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/mResultTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/result_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detect" />


</androidx.constraintlayout.widget.ConstraintLayout>