<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    tools:context=".ui.login.SearchActivity">

    <TextView
        android:id="@+id/diseaseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/baltster"
        android:text="@string/disease"
        android:textColor="@android:color/white"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diseaseAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_disease"
        android:fontFamily="@font/bebas_neue_pro_bold_bold"
        android:textColor="@color/g_font"
        android:textSize="14pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diseaseName" />

    <TextView
        android:id="@+id/diseaseDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/temp_description"
        android:textColor="@color/d_font"
        android:scrollbars = "vertical"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_disease"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diseaseAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>